tests/baselines/reference/project/jsFileCompilationSameNameDTsSpecifiedWithAllowJs/amd/jsFileCompilationSameNameDTsSpecifiedWithAllowJs.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.js', '.jsx', '.cts', '.d.cts', '.cjs', '.mts', '.d.mts', '.mjs'.


==== SameNameDTsSpecifiedWithAllowJs/tsconfig.json (0 errors) ====
    {
      "compilerOptions": { "allowJs": true },
      "files": [ "a.d.ts" ]
    }
==== SameNameDTsSpecifiedWithAllowJs/a.d.ts (0 errors) ====
    declare var test: number;